content/_generated-doc/2.7/config/quarkus-mailer-mail-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-mailer-mail-config_configuration]]link:#quarkus-mailer-mail-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-mailer-mail-config_quarkus.mailer.from]]`link:#quarkus-mailer-mail-config_quarkus.mailer.from[quarkus.mailer.from]`

[.description]
--
Sets the default `from` attribute when not specified in the `io.quarkus.mailer.Mail` instance. It's the sender email address.
--|string 
|


a| [[quarkus-mailer-mail-config_quarkus.mailer.mock]]`link:#quarkus-mailer-mail-config_quarkus.mailer.mock[quarkus.mailer.mock]`

[.description]
--
Enables the mock mode. When enabled, mails are not sent, but stored in an in-memory mailbox. The content of the emails is also printed on the console. 
 Disabled by default on PROD, enabled by default on DEV and TEST modes.
--|boolean 
|


a| [[quarkus-mailer-mail-config_quarkus.mailer.bounce-address]]`link:#quarkus-mailer-mail-config_quarkus.mailer.bounce-address[quarkus.mailer.bounce-address]`

[.description]
--
Sets the default bounce email address. A bounced email, or bounce, is an email message that gets rejected by a mail server.
--|string 
|


a| [[quarkus-mailer-mail-config_quarkus.mailer.host]]`link:#quarkus-mailer-mail-config_quarkus.mailer.host[quarkus.mailer.host]`

[.description]
--
Sets the SMTP host name.
--|string 
|`localhost`


a| [[quarkus-mailer-mail-config_quarkus.mailer.port]]`link:#quarkus-mailer-mail-config_quarkus.mailer.port[quarkus.mailer.port]`

[.description]
--
The SMTP port. The default value depends on the configuration. The port 25 is used as default when `ssl` is disabled. This port continues to be used primarily for SMTP relaying. SMTP relaying is the transmission of email from email server to email server. The port 587 is the default port when `ssl` is enabled. It ensures that email is submitted securely. Note that the port 465 may be used by SMTP servers, however, IANA has reassigned a new service to this port, and it should no longer be used for SMTP communications.
--|int 
|


a| [[quarkus-mailer-mail-config_quarkus.mailer.username]]`link:#quarkus-mailer-mail-config_quarkus.mailer.username[quarkus.mailer.username]`

[.description]
--
Sets the username to connect to the SMTP server.
--|string 
|


a| [[quarkus-mailer-mail-config_quarkus.mailer.password]]`link:#quarkus-mailer-mail-config_quarkus.mailer.password[quarkus.mailer.password]`

[.description]
--
Sets the password to connect to the SMTP server.
--|string 
|


a| [[quarkus-mailer-mail-config_quarkus.mailer.ssl]]`link:#quarkus-mailer-mail-config_quarkus.mailer.ssl[quarkus.mailer.ssl]`

[.description]
--
Enables or disables the TLS/SSL.
--|boolean 
|`false`


a| [[quarkus-mailer-mail-config_quarkus.mailer.trust-all]]`link:#quarkus-mailer-mail-config_quarkus.mailer.trust-all[quarkus.mailer.trust-all]`

[.description]
--
Set whether all server certificates should be trusted. This option is only used when `ssl` is enabled.
--|boolean 
|


a| [[quarkus-mailer-mail-config_quarkus.mailer.max-pool-size]]`link:#quarkus-mailer-mail-config_quarkus.mailer.max-pool-size[quarkus.mailer.max-pool-size]`

[.description]
--
Sets the max number of open connections to the mail server.
--|int 
|`10`


a| [[quarkus-mailer-mail-config_quarkus.mailer.own-host-name]]`link:#quarkus-mailer-mail-config_quarkus.mailer.own-host-name[quarkus.mailer.own-host-name]`

[.description]
--
Sets the hostname to be used for HELO/EHLO and the Message-ID.
--|string 
|


a| [[quarkus-mailer-mail-config_quarkus.mailer.keep-alive]]`link:#quarkus-mailer-mail-config_quarkus.mailer.keep-alive[quarkus.mailer.keep-alive]`

[.description]
--
Sets if connection pool is enabled. If the connection pooling is disabled, the max number of sockets is enforced nevertheless.
--|boolean 
|`true`


a| [[quarkus-mailer-mail-config_quarkus.mailer.disable-esmtp]]`link:#quarkus-mailer-mail-config_quarkus.mailer.disable-esmtp[quarkus.mailer.disable-esmtp]`

[.description]
--
Disable ESMTP. The RFC-1869 states that clients should always attempt `EHLO` as first command to determine if ESMTP is supported, if this returns an error code, `HELO` is tried to use the *regular* SMTP command.
--|boolean 
|`false`


a| [[quarkus-mailer-mail-config_quarkus.mailer.start-tls]]`link:#quarkus-mailer-mail-config_quarkus.mailer.start-tls[quarkus.mailer.start-tls]`

[.description]
--
Sets the TLS security mode for the connection. Either `DISABLED`, `OPTIONAL` or `REQUIRED`.
--|string 
|`OPTIONAL`


a| [[quarkus-mailer-mail-config_quarkus.mailer.login]]`link:#quarkus-mailer-mail-config_quarkus.mailer.login[quarkus.mailer.login]`

[.description]
--
Sets the login mode for the connection. Either `NONE`, @++{++code DISABLED++}++, `OPTIONAL`, `REQUIRED` or `XOAUTH2`.  
 - DISABLED means no login will be attempted 
 - NONE means a login will be attempted if the server supports in and login credentials are set 
 - REQUIRED means that a login will be attempted if the server supports it and the send operation will fail otherwise 
 - XOAUTH2 means that a login will be attempted using Google Gmail Oauth2 tokens
--|string 
|`NONE`


a| [[quarkus-mailer-mail-config_quarkus.mailer.auth-methods]]`link:#quarkus-mailer-mail-config_quarkus.mailer.auth-methods[quarkus.mailer.auth-methods]`

[.description]
--
Sets the allowed authentication methods. These methods will be used only if the server supports them. If not set, all supported methods may be used. The list is given as a space separated list, such as `DIGEST-MD5 CRAM-SHA256 CRAM-SHA1 CRAM-MD5 PLAIN LOGIN`.
--|string 
|


a| [[quarkus-mailer-mail-config_quarkus.mailer.truststore.password]]`link:#quarkus-mailer-mail-config_quarkus.mailer.truststore.password[quarkus.mailer.truststore.password]`

[.description]
--
Sets the trust store password if any. Note that the password is only used for JKS and PCK++#++12 trust stores.
--|string 
|


a| [[quarkus-mailer-mail-config_quarkus.mailer.truststore.paths]]`link:#quarkus-mailer-mail-config_quarkus.mailer.truststore.paths[quarkus.mailer.truststore.paths]`

[.description]
--
Sets the location of the trust store files. If you use JKS or PCK++#++12, only one path is allowed. If you use PEM files, you can specify multiple paths. 
 The relative paths are relative to the application working directly.
--|list of string 
|


a| [[quarkus-mailer-mail-config_quarkus.mailer.truststore.type]]`link:#quarkus-mailer-mail-config_quarkus.mailer.truststore.type[quarkus.mailer.truststore.type]`

[.description]
--
Sets the trust store type. By default, it guesses the type from the file name extension. For instance, `truststore.pem` will be seen as a PEM file, while `truststore.jks` will be seen as a JKS file. `truststore.p12` and `truststore.pfx` will both be seen as PCK++#++12 files. Accepted values are: `JKS`, `PEM`, `PCKS`.
--|string 
|


a| [[quarkus-mailer-mail-config_quarkus.mailer.multi-part-only]]`link:#quarkus-mailer-mail-config_quarkus.mailer.multi-part-only[quarkus.mailer.multi-part-only]`

[.description]
--
Whether or not the mail should always been sent as multipart even if they don't have attachments. When sets to true, the mail message will be encoded as multipart even for simple mails without attachments.
--|boolean 
|`false`


a| [[quarkus-mailer-mail-config_quarkus.mailer.allow-rcpt-errors]]`link:#quarkus-mailer-mail-config_quarkus.mailer.allow-rcpt-errors[quarkus.mailer.allow-rcpt-errors]`

[.description]
--
Sets if sending allows recipients errors. If set to true, the mail will be sent to the recipients that the server accepted, if any.
--|boolean 
|`false`


a| [[quarkus-mailer-mail-config_quarkus.mailer.pipelining]]`link:#quarkus-mailer-mail-config_quarkus.mailer.pipelining[quarkus.mailer.pipelining]`

[.description]
--
Enables or disables the pipelining capability if the SMTP server supports it.
--|boolean 
|`true`


a| [[quarkus-mailer-mail-config_quarkus.mailer.pool-cleaner-period]]`link:#quarkus-mailer-mail-config_quarkus.mailer.pool-cleaner-period[quarkus.mailer.pool-cleaner-period]`

[.description]
--
Sets the connection pool cleaner period. Zero disables expiration checks and connections will remain in the pool until they are closed.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`PT1S`


a| [[quarkus-mailer-mail-config_quarkus.mailer.keep-alive-timeout]]`link:#quarkus-mailer-mail-config_quarkus.mailer.keep-alive-timeout[quarkus.mailer.keep-alive-timeout]`

[.description]
--
Set the keep alive timeout for the SMTP connection. This value determines how long a connection remains unused in the pool before being evicted and closed. A timeout of 0 means there is no timeout.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`PT300S`


a| [[quarkus-mailer-mail-config_quarkus.mailer.ntlm.workstation]]`link:#quarkus-mailer-mail-config_quarkus.mailer.ntlm.workstation[quarkus.mailer.ntlm.workstation]`

[.description]
--
Sets the workstation used on NTLM authentication.
--|string 
|


a| [[quarkus-mailer-mail-config_quarkus.mailer.ntlm.domain]]`link:#quarkus-mailer-mail-config_quarkus.mailer.ntlm.domain[quarkus.mailer.ntlm.domain]`

[.description]
--
Sets the domain used on NTLM authentication.
--|string 
|

|===
ifndef::no-duration-note[]
[NOTE]
[[duration-note-anchor]]
.About the Duration format
====
The format for durations uses the standard `java.time.Duration` format.
You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc].

You can also provide duration values starting with a number.
In this case, if the value consists only of a number, the converter treats the value as seconds.
Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format.
====
endif::no-duration-note[]
